修改了超小屏幕下列表按钮

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                     <span class="iconfont icon-ziyuan " id="showBtn"></span>
                 </header>
 
-                <div id="left-container" class="d-flex align-items-center login " >
-                    <div class="px-0 px-lg-5 ">
+                <div id="left-container" class="d-flex align-items-center login justify-content-between ">
+                    
+                    <div class="px-0 px-lg-5">
                         <h1 class="font-weight-bold mt-5 mb-5">心情惬意，来杯咖啡吧！☕</h1>
-                        <div class="d-none d-sm-block  d-sm-none " >
+
+                        <div class="d-none d-sm-block  d-sm-none ">
                             <a href="#" class=" ">
                                 <span>
                                     <svg width="20px" t="1616245510295" class="icon" viewBox="0 0 1024 1024"
@@ -52,6 +54,7 @@
                             <a href="" class="btn btn-outline-success radiusMy ml-5  ">注册</a>
                         </div>
                     </div>
+                    <span id="xs" class="iconfont icon-ziyuan d-flex d-sm-none " ></span>
                 </div>
 
 
@@ -61,8 +64,8 @@
 
                         <span class="iconfont icon-ziyuan" id="closeBtn"></span>
                     </header>
-                    <div id="list" class="list d-lg-none d-none " >
-                        <ul >
+                    <div id="list" class="list d-lg-none d-none ">
+                        <ul>
                             <li><a href="">门店</a></li>
                             <li><a href="">星享俱乐部</a></li>
                             <li><a href="">菜单</a></li>
@@ -78,9 +81,6 @@
 
                         </ul>
                     </div>
-                    <footer>
-
-                    </footer>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="carousel slide" id="pic" data-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active" >
+                            <div class="carousel-item active">
                                 <img src="星巴克图片/ia_100000005.jpg" alt="" class="img-fluid">
                             </div>
                             <div class="carousel-item " data-interval="1000">
@@ -138,7 +138,7 @@
                         </a>
                     </div>
                 </div>
-                
+
 
                 <div class="row p-5 bg-white align-items-center text-center text-sm-left start">
                     <div class="col-sm-5">
@@ -162,11 +162,11 @@
                         <p class="text-muted">在星巴克天猫旗舰店发现更多咖啡心意</p>
                     </div>
 
-                    <div class="col-12"> 
+                    <div class="col-12">
                         <ul class="row list-unstyled justify-content-around px-5">
                             <li class="col-6 col-md-3">
                                 <a href="#" class="d-inline-block text-center px-2 bg-white rounded">
-                                    <img src="星巴克图片/ia_100000012.png"  alt="" class="img-fluid">
+                                    <img src="星巴克图片/ia_100000012.png" alt="" class="img-fluid">
                                     <h4 class="my-2 font-weight-bold">会员星礼包</h4>
                                     <p class="text-muted">星享卡新升级<br>更多新意好礼</p>
                                     <p class="caption">了解更多</p>
@@ -174,7 +174,7 @@
                             </li>
                             <li class="col-6 col-md-3">
                                 <a href="#" class="d-inline-block text-center px-2 bg-white rounded">
-                                    <img src="星巴克图片/ia_100000013.png"  alt="" class="img-fluid">
+                                    <img src="星巴克图片/ia_100000013.png" alt="" class="img-fluid">
                                     <h4 class="my-2 font-weight-bold">会员星礼包</h4>
                                     <p class="text-muted">星享卡新升级<br>更多新意好礼</p>
                                     <p class="caption">了解更多</p>
@@ -182,7 +182,7 @@
                             </li>
                             <li class="col-6 col-md-3">
                                 <a href="#" class="d-inline-block text-center px-2 bg-white rounded">
-                                    <img src="星巴克图片/ia_100000014.png"  alt="" class="img-fluid">
+                                    <img src="星巴克图片/ia_100000014.png" alt="" class="img-fluid">
                                     <h4 class="my-2 font-weight-bold">会员星礼包</h4>
                                     <p class="text-muted">星享卡新升级<br>更多新意好礼</p>
                                     <p class="caption">了解更多</p>
@@ -190,7 +190,7 @@
                             </li>
                             <li class="col-6 col-md-3">
                                 <a href="#" class="d-inline-block text-center px-2 bg-white rounded">
-                                    <img src="星巴克图片/ia_100000015.png"  alt="" class="img-fluid">
+                                    <img src="星巴克图片/ia_100000015.png" alt="" class="img-fluid">
                                     <h4 class="my-2 font-weight-bold">会员星礼包</h4>
                                     <p class="text-muted">星享卡新升级<br>更多新意好礼</p>
                                     <p class="caption">了解更多</p>
@@ -211,7 +211,7 @@
                     <div class="col-12">
                         <div class="scoll pl-3">
                             <ul class="list-unstyled d-flex justify-content-between ">
-                                <li class="card"> 
+                                <li class="card">
                                     <a href="#">
                                         <img src="星巴克图片/ia_100000030.jpg" alt="" class="card-img-top">
                                     </a>
@@ -220,7 +220,7 @@
                                     </div>
                                     <span class="position-absolute text-white px-3 py-1">咖啡知识</span>
                                 </li>
-                                <li class="card"> 
+                                <li class="card">
                                     <a href="#">
                                         <img src="星巴克图片/ia_100000031.jpg" alt="" class="card-img-top">
                                     </a>
@@ -229,7 +229,7 @@
                                     </div>
                                     <span class="position-absolute text-white px-3 py-1">咖啡知识</span>
                                 </li>
-                                <li class="card"> 
+                                <li class="card">
                                     <a href="#">
                                         <img src="星巴克图片/ia_100000032.jpg" alt="" class="card-img-top">
                                     </a>
@@ -238,7 +238,7 @@
                                     </div>
                                     <span class="position-absolute text-white px-3 py-1">咖啡知识</span>
                                 </li>
-                                <li class="card"> 
+                                <li class="card">
                                     <a href="#">
                                         <img src="星巴克图片/ia_100000033.jpg" alt="" class="card-img-top">
                                     </a>
