在超小屏幕下点击菜单进入菜单页面

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <ul>
                             <li><a href="">门店</a></li>
                             <li><a href="">星享俱乐部</a></li>
-                            <li><a href="">菜单</a></li>
+                            <li><a href="menu.html">菜单</a></li>
                             <li><a href="">星巴克移动应用</a></li>
                             <li><a href="">星礼卡</a></li>
                             <li><a href="">星巴克甄选</a></li>
