--- a/menu.html
+++ b/menu.html
@@ -117,11 +117,11 @@
                                 <span class="m-auto">冷翠冰咖啡</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">清甜奶油冷萃</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">棉云冷萃</span>
                             </div>
                         </div>
@@ -130,19 +130,19 @@
                         <h4 class="mt-4 text-secondary font-weight-bolder">咖啡融合冰淇淋</h4>
                         <div class="img-span-container d-flex justify-content-around mt-5 mb-5 flex-wrap-reverse">
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                         </div>
@@ -151,19 +151,19 @@
                         <h4 class="mt-4 text-secondary font-weight-bolder">咖啡融合冰淇淋</h4>
                         <div class="img-span-container d-flex justify-content-around mt-5 mb-5 flex-wrap-reverse">
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                         </div>
@@ -172,19 +172,19 @@
                         <h4 class="mt-4 text-secondary font-weight-bolder">咖啡融合冰淇淋</h4>
                         <div class="img-span-container d-flex justify-content-around mt-5 mb-5 flex-wrap-reverse">
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                             <div class="d-flex flex-column justify-content-center mt-5">
-                                <img class="m-auto " src="./menu图片/affogato.jpg" alt="">
+                                <img class="m-auto " src="./饮料_星巴克/ia_200000020.jpg" alt="">
                                 <span class="m-auto">阿馥奇朵</span>
                             </div>
                         </div>
