--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
 
                     <div class="col-12">
-                        <div class="scoll pl-3">
+                        <div class="pre-scrollable  pl-3">
                             <ul class="list-unstyled d-flex justify-content-between ">
                                 <li class="card">
                                     <a href="#">
