可以返回主页

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row justify-content-end">
+        <div class="row justify-content-end ">
             <!-- 左边 -->
             <div class="col-lg-4 position-fixed border-right leftCon">
                 <header class="navbar d-sm-flex d-none px-0 px-lg-2 py-3 py-lg-4 d-sm-none">
                     <a href="#" class="navbar-brand"><img src="" alt="" class="iconfont icon-xingbake "></a>
                     <ul id="nav" class="nav">
                         <li class="nav-item">
-                            <a href="" class="nav-link text-dark font-weight-bold">门店</a>
+                            <a href="index.html" class="nav-link text-dark font-weight-bold">门店</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link text-dark font-weight-bold">我的账户</a>
@@ -34,7 +34,7 @@
                 </header>
 
                 <div id="left-container" class="d-flex align-items-center login justify-content-between ">
-                    
+
                     <div class="px-0 px-lg-5">
                         <h1 class="font-weight-bold mt-5 mb-5">心情惬意，来杯咖啡吧！☕</h1>
 
@@ -54,7 +54,7 @@
                             <a href="" class="btn btn-outline-success radiusMy ml-5  ">注册</a>
                         </div>
                     </div>
-                    <span id="xs" class="iconfont icon-ziyuan d-flex d-sm-none " ></span>
+                    <span id="xs" class="iconfont icon-ziyuan d-flex d-sm-none "></span>
                 </div>
 
 
@@ -66,7 +66,7 @@
                     </header>
                     <div id="list" class="list d-lg-none d-none ">
                         <ul>
-                            <li><a href="">门店</a></li>
+                            <li><a href="index.html">门店</a></li>
                             <li><a href="">星享俱乐部</a></li>
                             <li><a href="menu.html">菜单</a></li>
                             <li><a href="">星巴克移动应用</a></li>
